[package]
name = "hamsando"
version = "0.1.0"
edition = "2021"

[dependencies]
addr = "0.15.6"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
url = { version = "2.5.4", features = ["serde"] }
