[workspace]
members = ["dst"]

[package]
name = "hamsando"
version = "0.1.0"
edition = "2024"
description = "A simple and type-safe client for the Porkbun API."
license = "MIT OR Apache-2.0"
repository = "https://github.com/FintasticMan/hamsando"
keywords = ["api", "dns","porkbun"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
addr = "0.15.6"
dst = { version = "0.1.0", path = "dst" }
psl = "2.1.102"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
url = { version = "2.5.4", features = ["serde"] }
