[workspace]
members = []

[package]
name = "hamsando"
version = "0.1.0"
edition = "2024"
description = "A simple and type-safe client for the Porkbun API."
license = "MIT OR Apache-2.0"
repository = "https://github.com/FintasticMan/hamsando"
keywords = ["api", "dns","porkbun"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
psl = "2.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-dst = { git = "https://github.com/FintasticMan/simple-dst.git", version = "0.1.0" }
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0"
url = { version = "2.5", features = ["serde"] }
